--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 
     <header class="header">
       <div class="overlay"></div>
+      <div class="container">
+        <div class="description ">
+          <h1> *posting, evolved. </h1>
+            <p> Lipsum lorem ipsum </p>
+            <button class="btn btn-outline-secondary btn-lg">See more</button>
+        </div>
+      </div>
     </header>
 
 
