--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Other CSS -->
+    <link href='https://fonts.googleapis.com/css?family=Overpass Mono' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
     <title>Jade C</title>
@@ -36,10 +39,10 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description ">
-          <h1> *posting, evolved. </h1>
-            <p> Lipsum lorem ipsum </p>
-            <button class="btn btn-outline-secondary btn-lg">See more</button>
+        <div class="description">
+          <h1> Quality shitposting, evolved. </h1>
+            <p> This thing empty for now. </p>
+            <button class="btn btn-outline-secondary">See more soon!</button>
         </div>
       </div>
     </header>
