--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>Jade C</title>
+    <title>Contact</title>
 
   </head>
     <body>
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg fixed-top ">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,9 +40,9 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="description">
-          <h1> Quality shitposting, evolved. </h1>
-            <p> This thing empty for now. </p>
-            <button class="btn btn-outline-secondary">See more soon!</button>
+          <h1> Like what you see? </h1>
+            <p> I'll have contact info here. </p>
+            <button class="btn btn-outline-secondary">This don't do anything yet!</button>
         </div>
       </div>
     </header>
