Contact page drafted

--- a/contact.html
+++ b/contact.html
@@ -18,34 +18,31 @@
   </head>
     <body>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg fixed-top ">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">     <ul class="navbar-nav mr-4">
-          <li class="nav-item">
-            <a class="nav-link" data-value="about" href="about.html">About</a>        </li>
-            <li class="nav-item">
-              <a class="nav-link" data-value="projects" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-value="blog" href="blog.html">Blog</a>         </li>
-              <li class="nav-item">
-                  <a class="nav-link " data-value="contact" href="contact.html">Contact</a>       </li>
-                </ul>
-        </div></nav>
+      <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
+      <script src="header.js"></script>
 
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
         <div class="description">
-          <h1> Like what you see? </h1>
-            <p> I'll have contact info here. </p>
-            <button class="btn btn-outline-secondary">This don't do anything yet!</button>
+          <h1> Curious about what you see? </h1>
+            <h3> Find me here. </h3>
+            <div class="row">
+              <div class="column">
+                <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg" alt="Email" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px"></a>
+              </div>
+              <div class="column">
+                <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155"><img src="icons/LI-In-Bug-wht.png" alt="LinkedIn" style="width:80%"></a>
+              </div>
+              <div class="column">
+                <a href="https://github.com/Certaingemstone"><img src="icons/GitHub-Mark-Light-120px-plus.png" alt="GitHub" style="width:80%"></a>
+              </div>
+            </div>
+
         </div>
       </div>
     </header>
+
 
 
     <!-- Optional JavaScript -->
