--- a/about.html
+++ b/about.html
@@ -18,23 +18,8 @@
   </head>
     <body>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg fixed-top ">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">     <ul class="navbar-nav mr-4">
-          <li class="nav-item">
-            <a class="nav-link" data-value="about" href="about.html">About</a>        </li>
-            <li class="nav-item">
-              <a class="nav-link" data-value="projects" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-value="blog" href="blog.html">Blog</a>         </li>
-              <li class="nav-item">
-                  <a class="nav-link " data-value="contact" href="contact.html">Contact</a>       </li>
-                </ul>
-        </div></nav>
+      <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
+      <script src="header.js"></script>
 
     <header class="header">
       <div class="overlay"></div>
