Update contact, fix Home

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description">
+        <div class="description" style="background-color:rgba(14, 14, 10, 0.7); border-radius: 15%">
           <h1> Curious about what you see? </h1>
             <h3> Find me here. </h3>
             <div class="row">
               <div class="column">
-                <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg" alt="Email" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px"></a>
+                <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg#svgView(preserveAspectRatio(none))" alt="Email" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px"></a>
               </div>
               <div class="column">
                 <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155"><img src="icons/LI-In-Bug-wht.png" alt="LinkedIn" style="width:80%"></a>
