Update contact, home

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description">
-          <h1> Quality shitposting, evolved. </h1>
-            <p> This thing empty for now. </p>
-            <button class="btn btn-outline-secondary">See more soon!</button>
+        <div class="descriptioncent">
+          <h1> Jade Chongsathapornpong </h1>
+            <h3> Quality shitposting, evolved. </h3>
+            <a href="about.html"><button class="btn btn-outline-secondary">Learn more</button></a>
         </div>
       </div>
     </header>
