--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description" style="background-color:rgba(14, 14, 10, 0.7); border-radius: 15%">
+        <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
           <h1> Curious about what you see? </h1>
             <h3> Find me here. </h3>
             <div class="row">
@@ -35,7 +35,10 @@
                 <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155"><img src="icons/LI-In-Bug-wht.png" alt="LinkedIn" style="width:80%"></a>
               </div>
               <div class="column">
-                <a href="https://github.com/Certaingemstone"><img src="icons/GitHub-Mark-Light-120px-plus.png" alt="GitHub" style="width:80%"></a>
+                <a href="https://flickr.com/photos/certaingemstone/"><img src="icons/flickr.png" alt="Flickr" style="filter: invert(100%); width:80%"></a>
+              </div>
+              <div class="column">
+                <a href="https://github.com/Certaingemstone"><img src="icons/GitHub-Mark-Light-120px-plus.png" alt="GitHub" style="width:80%" ></a>
               </div>
             </div>
 
