About and links test

--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>About</title>
+    <title>Contact</title>
 
   </head>
     <body>
@@ -24,18 +24,30 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description">
-          <h1> Navigate Jade</h1>
-          <h3> What is Jade? </h3>
-            <p> Hi there! I'm a student of physics at MIT, hailing from Oxnard, California—the land of strawberries and sunshine. I enjoy building and learning about new things, which brought me to summon this website, among other things; I've touched on everything from electronics and robotics to materials science and seaweed, computer graphics and photography to electronic music and piano. Welcome. Maybe you'll find something you like? </p>
-
-                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary">Past experience? <b>Resume</b></button></a></div>
-                <div><a href="gallery.html"><button class="btn btn-lg btn-outline-secondary">Pretty pictures? <b>Photos/CG</b></button></a></div>
-                <div><a href="projects.html"><button class="btn btn-lg btn-outline-secondary">Random things? <b>Projects</b></button></a></div>
-
+        <div class="description" style="background-color:rgba(14, 14, 10, 0.7);">
+          <h1> Art Stuff </h1>
+            <h3> Placeholder subheading. </h3>
+            <div class="row">
+              <div class="column">
+                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
+              </div>
+              <div class="column">
+                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
+              </div>
+              <div class="column">
+                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
+              </div>
+              <div class="column">
+                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
+              </div>
+            </div>
+              <div>
+                <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
+              </div>
         </div>
       </div>
     </header>
+
 
 
     <!-- Optional JavaScript -->
