--- a/index.html
+++ b/index.html
@@ -18,31 +18,16 @@
   </head>
     <body>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg fixed-top" id="NAVMENU">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">     <ul class="navbar-nav mr-4">
-          <li class="nav-item">
-            <a class="nav-link" data-value="about" href="about.html">About</a>        </li>
-            <li class="nav-item">
-              <a class="nav-link" data-value="projects" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " data-value="blog" href="blog.html">Blog</a>         </li>
-              <li class="nav-item">
-                  <a class="nav-link " data-value="contact" href="contact.html">Contact</a>       </li>
-                </ul>
-        </div></nav>
+      <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
+      <script src="header.js"></script>
 
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
         <div class="descriptioncent">
           <h1> Jade Chongsathapornpong </h1>
-            <h3> Quality shitposting, evolved. </h3>
-            <a href="about.html"><button class="btn btn-outline-secondary">Learn more</button></a>
+            <h3> Science, Engineering, Art. </h3>
+            <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Learn more</button></a>
         </div>
       </div>
     </header>
