--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,9 @@
         <div class="description">
           <h1> Projects. </h1>
             <p> This thing empty for now. </p>
-            <button class="btn btn-outline-secondary">See more soon!</button>
+            <div>
+              <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
+            </div>
         </div>
       </div>
     </header>
