--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
         <div class="description">
           <h1> If I feel like talking about stuff. </h1>
             <p> This thing empty for now. </p>
-            <button class="btn btn-outline-secondary">See more soon!</button>
+            <button class="btn btn-lg btn-outline-secondary">See more soon!</button>
         </div>
       </div>
     </header>
