--- a/about.html
+++ b/about.html
@@ -25,13 +25,12 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="description">
-          <h1> Navigate Jade</h1>
-          <h3> What is Jade? </h3>
-            <p> Hi there! I'm a student of physics at MIT, hailing from Oxnard, California—the land of strawberries and sunshine. I enjoy building and learning about new things, which brought me to summon this website, among other things; I've touched on everything from electronics and robotics to materials science and seaweed, computer graphics and photography to electronic music and piano. Welcome. Maybe you'll find something you like? </p>
+          <h1>Jade C.</h1>
+            <p> Hi there! I'm a student of physics at MIT, hailing from Oxnard, California. I've touched on everything from electronics and robotics, to materials science and seaweed, alongside computer graphics and photography. Maybe you'll find something you like here! </p>
 
-                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary">Past experience? <b>Resume</b></button></a></div>
-                <div><a href="gallery.html"><button class="btn btn-lg btn-outline-secondary">Pretty pictures? <b>Photos/CG</b></button></a></div>
-                <div><a href="projects.html"><button class="btn btn-lg btn-outline-secondary">Random things? <b>Projects</b></button></a></div>
+                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary"><b>Resume</b></button></a></div>
+                <div><a href="gallery.html"><button class="btn btn-lg btn-outline-secondary"><b>Photos/Art</b></button></a></div>
+                <div><a href="projects.html"><button class="btn btn-lg btn-outline-secondary"><b>Projects</b></button></a></div>
 
         </div>
       </div>
