--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="container">
         <div class="descriptioncent">
           <h1> Jade Chongsathapornpong </h1>
-            <h3> Science, Engineering, Art. </h3>
-            <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Learn more</button></a>
+            <h3> Science. Engineering. Art. </h3>
+            <a href="about.html"><button class="btn btn-lg btn-outline-secondary">About</button></a>
         </div>
       </div>
     </header>
