--- a/about.html
+++ b/about.html
@@ -21,15 +21,24 @@
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
       <script src="header.js"></script>
 
+      <!-- Set background -->
+      <style>
+      header {
+        background-image: url('images/goo.jpg');
+      }
+      </style>
+
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
         <div class="description">
           <h1>Jade C.</h1>
-            <p> Hi there! I'm a student of physics at MIT, hailing from Oxnard, California. I've touched on everything from electronics and robotics, to materials science and seaweed, alongside computer graphics and photography. Maybe you'll find something you like here! </p>
+            <p> Hi there! I'm a physics/engineering student at MIT, from Oxnard, California. I've touched on everything from electronics and robotics, to materials science and seaweed, alongside computer graphics and photography. One way or another, I want to give the world a brighter future. </p>
 
                 <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary"><b>Resume</b></button></a></div>
+                <br></br>
                 <div><a href="gallery.html"><button class="btn btn-lg btn-outline-secondary"><b>Photos/Art</b></button></a></div>
+                <br></br>
                 <div><a href="projects.html"><button class="btn btn-lg btn-outline-secondary"><b>Projects</b></button></a></div>
 
         </div>
