--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,18 @@
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
       <script src="header.js"></script>
 
+      <!-- Set background -->
+      <style>
+      header {
+        background-image: url('images/sphere.jpg');
+      }
+      </style>
+
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
         <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
-          <h1> Curious about what you see? </h1>
+          <h1> Want to get in touch? </h1>
             <h3> Find me here. </h3>
             <div class="row">
               <div class="column">
