--- a/gallery.html
+++ b/gallery.html
@@ -21,12 +21,19 @@
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
       <script src="header.js"></script>
 
+      <!-- Set background -->
+      <style>
+      header {
+        background-image: url('images/sphere.jpg');
+      }
+      </style>
+
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
         <div class="description" style="background-color:rgba(14, 14, 10, 0.7);">
           <h1> Art Stuff </h1>
-            <h3> Placeholder subheading. </h3>
+            <h3> See Flickr link on contact page for more. </h3>
             <div class="row">
               <div class="column">
                 <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
