--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,8 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="description">
-          <h1> Projects. </h1>
-            <p> This thing empty for now. </p>
+          <h1> Projects </h1>
+            <p> Builds, code, etc. </p>
             <div>
               <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
             </div>
