--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <!-- Set background -->
       <style>
       header {
-        background-image: url('images/goo.jpg');
+        background-image: url('images/sea.jpg');
       }
       </style>
 
@@ -33,13 +33,12 @@
       <div class="container">
         <div class="description">
           <h1>Jade C.</h1>
-            <p> Hi there! I'm a physics/engineering student at MIT, from Oxnard, California. I've touched on everything from electronics and robotics, to materials science and seaweed, alongside computer graphics and photography. One way or another, I want to give the world a brighter future. </p>
+            <p> Hi! I'm a physics/engineering student at MIT from Oxnard, CA. I want to help shape a brighter future. Having touched on everything from electronics and robotics, to materials science and seaweed, I'm always up for new things.  </p>
 
-                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary"><b>Resume</b></button></a></div>
-                <br></br>
-                <div><a href="gallery.html"><button class="btn btn-lg btn-outline-secondary"><b>Photos/Art</b></button></a></div>
-                <br></br>
-                <div><a href="projects.html"><button class="btn btn-lg btn-outline-secondary"><b>Projects</b></button></a></div>
+                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary"><b>Resume</b></button></a>
+                  <a href="https://www.flickr.com/photos/certaingemstone/albums/72157714975988782"><button class="btn btn-lg btn-outline-secondary"><b>Images</b></button></a>
+                  <a href="projects.html"><button class="btn btn-lg btn-outline-secondary"><b>Projects</b></button></a></div>
+
 
         </div>
       </div>
