--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,13 @@
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
       <script src="header.js"></script>
 
+      <!-- Set background -->
+      <style>
+      header {
+        background-image: url('images/mbe.jpg');
+      }
+      </style>
+
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
