--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,5 @@
+<!--DEPRECATED-->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -24,7 +26,7 @@
       <!-- Set background -->
       <style>
       header {
-        background-image: url('images/sphere.jpg');
+        background-image: url('images/bubble.jpg');
       }
       </style>
 
@@ -33,8 +35,9 @@
       <div class="container">
         <div class="description" style="background-color:rgba(14, 14, 10, 0.7);">
           <h1> Art Stuff </h1>
-            <h3> See Flickr link on contact page for more. </h3>
-            <div class="row">
+            <h3> Some images I've created. </h3>
+
+            <!--<div class="row">
               <div class="column">
                 <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
               </div>
@@ -47,7 +50,8 @@
               <div class="column">
                 <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
               </div>
-            </div>
+            </div>-->
+
               <div>
                 <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
               </div>
