--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     <title>Projects</title>
 
   </head>
+
     <body>
       <!-- Navbar -->
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
@@ -31,16 +32,32 @@
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description">
+        <div class="descriptioncent">
           <h1> Projects </h1>
-            <p> Builds, code, etc. </p>
-            <div>
-              <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
-            </div>
+
+          <div class="project-item">
+      		    <p class="btn"><a href="#">A C++ Implementation of RK4</a></p>
+          </div>
+
+          <div class="project-item">
+      		    <p class="btn"><a href="#">Simulating Crystallization with Python</a></p>
+          </div>
+
+          <div class="project-item">
+      		    <p class="btn"><a href="#">Reverse Engineering a Switch</a></p>
+          </div>
+
+          <div class="project-item">
+      		    <p class="btn"><a href="#">Building a Flat Lamp</a></p>
+          </div>
+
+          <div class="project-item">
+      		    <p class="btn"><a href="#">Robot Chassis</a></p>
+          </div>
+
         </div>
       </div>
     </header>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
