--- a/projects.html
+++ b/projects.html
@@ -35,24 +35,52 @@
         <div class="descriptioncent">
           <h1> Projects </h1>
 
-          <div class="project-item">
-      		    <p class="btn"><a href="#">A C++ Implementation of RK4</a></p>
-          </div>
+          <div class="row">
 
-          <div class="project-item">
-      		    <p class="btn"><a href="#">Simulating Crystallization with Python</a></p>
-          </div>
+            <div class="column">
+              <div class="container">
+                <img src="images/bubble.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">LIGO Gravitational Wave Analysis</button><a href="#"></a>
+              </div>
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Simulating Crystallization</button><a href="#"></a>
+              </div>
+            </div>
 
-          <div class="project-item">
-      		    <p class="btn"><a href="#">Reverse Engineering a Switch</a></p>
-          </div>
+            <div class="column">
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Reverse Engineering a Switch</button><a href="#"></a>
+              </div>
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Building a Flat Lamp</button><a href="#"></a>
+              </div>
+            </div>
 
-          <div class="project-item">
-      		    <p class="btn"><a href="#">Building a Flat Lamp</a></p>
-          </div>
+            <div class="column">
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Harnessing the Sun</button><a href="#"></a>
+              </div>
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Designing a Robot Chassis</button><a href="#"></a>
+              </div>
+            </div>
 
-          <div class="project-item">
-      		    <p class="btn"><a href="#">Robot Chassis</a></p>
+            <div class="column">
+              <div class="container">
+                <img src="images/bubble.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Simulated Cosmic Microwave Background</button><a href="#"></a>
+              </div>
+              <div class="container">
+                <img src="images/goo.jpg">
+                <button type="button" class="btn btn-outline-secondary btn-lg">A C++ Implementation of RK4</button><a href="#"></a>
+              </div>
+            </div>
+
           </div>
 
         </div>
