--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <title>About</title>
 
   </head>
+
     <body>
       <!-- Navbar -->
       <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
@@ -33,17 +34,68 @@
       <div class="container">
         <div class="description">
           <h1>Jade C.</h1>
-            <p> Hi! I'm a physics/engineering student at MIT from Oxnard, CA. I want to help shape a brighter future. Having touched on everything from electronics and robotics, to materials science and seaweed, I'm always up for new things.  </p>
-
-                <div><a href="12-19E2.pdf"><button class="btn btn-lg btn-outline-secondary"><b>Resume</b></button></a>
-                  <a href="https://www.flickr.com/photos/certaingemstone/albums/72157714975988782"><button class="btn btn-lg btn-outline-secondary"><b>Images</b></button></a>
-                  <a href="projects.html"><button class="btn btn-lg btn-outline-secondary"><b>Projects</b></button></a></div>
-
-
+          <br>
+            <h3> Hi! I'm an MIT physics student working toward more sustainable energy and materials. That said, I'm interested in much more. Feel free to read my <a href="Jade_2_22.pdf">resume</a> or browse my focus areas below. </h3>
         </div>
       </div>
     </header>
 
+    <div class="panels" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
+      <h1> Pick a branch to explore. </h1>
+      <br>
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                <img src="images/bubble.jpg" class="img-fluid"/>
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body border-secondary">
+                <h3 class="card-title">Science</h3>
+                <p class="card-text">Research and development is my strong suit. I've examined biochar processes, studied novel materials for electronics, and worked on making the planet's largest fusion reactor more robust, among other things.</p>
+                <a href="#!" class="btn btn-outline-secondary">View</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                <img src="images/bubble.jpg" class="img-fluid"/>
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body border-secondary">
+                <h3 class="card-title">Engineering</h3>
+                <p class="card-text">No year is complete for me without building something. Solar cars, doorbells, trebuchets? Simulations, gravitational waves, Discord bots? Whatever it is, I've probably played around with it at some point.</p>
+                <a href="#!" class="btn btn-outline-secondary">View</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                <img src="images/bubble.jpg" class="img-fluid"/>
+                <a href="#!">
+                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body border-secondary">
+                <h3 class="card-title">Art</h3>
+                <p class="card-text">I really love photography, videography, and sound. But that doesn't mean I don't take them seriously. I've been involved in several local productions and occasionally work as an event photographer. Take a peek! </p>
+                <a href="#!" class="btn btn-outline-secondary">View</a>
+              </div>
+            </div>
+          </div>
+
+          
+
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
