--- a/art.html
+++ b/art.html
@@ -13,7 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>Contact</title>
+    <title>Art</title>
 
   </head>
     <body>
