--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="descriptioncent">
           <h1> Jade Chongsathapornpong </h1>
             <h3> Science. Engineering. Art. </h3>
-            <a href="about.html"><button class="btn btn-lg btn-outline-secondary">About</button></a>
+            <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Read more</button></a>
         </div>
       </div>
     </header>
