--- a/science.html
+++ b/science.html
@@ -1,5 +1,3 @@
-<!--DEPRECATED-->
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -15,7 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>Contact</title>
+    <title>Science</title>
 
   </head>
     <body>
@@ -26,35 +24,28 @@
       <!-- Set background -->
       <style>
       header {
-        background-image: url('images/bubble.jpg');
+        background-image: url('images/sphere.jpg');
       }
       </style>
 
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="description" style="background-color:rgba(14, 14, 10, 0.7);">
-          <h1> Art Stuff </h1>
-            <h3> Some images I've created. </h3>
+        <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
+          <h1> Want to get in touch? </h1>
+            <h3> Find me here. </h3>
+            <div class="row">
+              <div class="column">
+                <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg#svgView(preserveAspectRatio(none))" alt="Email" style="filter: invert(100%); position:relative; width:50%; top:-10px"></a>
+              </div>
+              <div class="column">
+                <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155"><img src="icons/LI-In-Bug-wht.png" alt="LinkedIn" style="width:50%"></a>
+              </div>
+              <div class="column">
+                <a href="https://github.com/Certaingemstone"><img src="icons/GitHub-Mark-Light-120px-plus.png" alt="GitHub" style="width:50%" ></a>
+              </div>
+            </div>
 
-            <!--<div class="row">
-              <div class="column">
-                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
-              </div>
-              <div class="column">
-                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
-              </div>
-              <div class="column">
-                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
-              </div>
-              <div class="column">
-                <img src="images/goo.jpg" alt="goo" style="filter: invert(100%); position:relative; height:100%; width:80%; top:-10px">
-              </div>
-            </div>-->
-
-              <div>
-                <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Back to about</button></a>
-              </div>
         </div>
       </div>
     </header>
