--- a/about.html
+++ b/about.html
@@ -47,15 +47,15 @@
           <div class="column">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/bubble.jpg" class="img-fluid"/>
-                <a href="#!">
+                <img src="images/dinoflagellates.jpg" class="img-fluid"/>
+                <a href="science.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Science</h3>
                 <p class="card-text">Research and development is my strong suit. I've examined biochar processes, studied novel materials for electronics, and worked on making the planet's largest fusion reactor more robust, among other things.</p>
-                <a href="#!" class="btn btn-outline-secondary">View</a>
+                <a href="science.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
           </div>
@@ -63,15 +63,15 @@
           <div class="column">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/bubble.jpg" class="img-fluid"/>
-                <a href="#!">
+                <img src="images/robots.jpg" class="img-fluid"/>
+                <a href="engineering.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Engineering</h3>
                 <p class="card-text">No year is complete for me without building something. Solar cars, doorbells, trebuchets? Simulations, gravitational waves, Discord bots? Whatever it is, I've probably played around with it at some point.</p>
-                <a href="#!" class="btn btn-outline-secondary">View</a>
+                <a href="engineering.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
           </div>
@@ -79,15 +79,15 @@
           <div class="column">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/bubble.jpg" class="img-fluid"/>
-                <a href="#!">
+                <img src="images/pattern_s.jpg" class="img-fluid"/>
+                <a href="art.html">
                   <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
                 </a>
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Art</h3>
-                <p class="card-text">I really love photography, videography, and sound. But that doesn't mean I don't take them seriously. I've been involved in several local productions and occasionally work as an event photographer. Take a peek! </p>
-                <a href="#!" class="btn btn-outline-secondary">View</a>
+                <p class="card-text">I love photography, videography, and sound. But that doesn't mean I don't take them seriously. I've been involved in several local productions and work as an event photographer. Feed your senses. </p>
+                <a href="art.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
           </div>
