--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <!-- Set background -->
       <style>
       header {
-        background-image: url('images/sphere.jpg');
+        background-image: url('images/bubble.jpg');
       }
       </style>
 
