--- a/science.html
+++ b/science.html
@@ -24,33 +24,90 @@
       <!-- Set background -->
       <style>
       header {
-        background-image: url('images/sphere.jpg');
+        background-image: url('images/portal.jpg');
       }
       </style>
 
     <header class="header">
       <div class="overlay"></div>
       <div class="container">
-        <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
-          <h1> Want to get in touch? </h1>
-            <h3> Find me here. </h3>
-            <div class="row">
-              <div class="column">
-                <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg#svgView(preserveAspectRatio(none))" alt="Email" style="filter: invert(100%); position:relative; width:50%; top:-10px"></a>
+        <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 1%">
+          <h1> Basic research. </h1>
+          <br>
+          <h3>Poking at different systems and getting useful data is an addiction of sorts. Here's some things I've seen so far.</h3>
+    </header>
+
+          <div class="row">
+            
+            <div class="column">
+              <div class="card">
+                <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                  <img src="images/mbe.jpg" class="img-fluid"/>
+                  <a href="">
+                    <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                  </a>
+                </div>
+                <div class="card-body border-secondary">
+                  <h3 class="card-title">Cd<sub>3</sub>As<sub>2</sub> Epitaxial Films</h3>
+                  <p class="card-text">Placeholder.</p>
+                  <a href="" class="btn btn-outline-secondary">View</a>
+                </div>
               </div>
-              <div class="column">
-                <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155"><img src="icons/LI-In-Bug-wht.png" alt="LinkedIn" style="width:50%"></a>
+            </div>
+  
+            <div class="column">
+              <div class="card">
+                <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                  <img src="images/biochar.jpg" class="img-fluid"/>
+                  <a href="">
+                    <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                  </a>
+                </div>
+                <div class="card-body border-secondary">
+                  <h3 class="card-title">Oxygen-lean Torrefied Biomass</h3>
+                  <p class="card-text">Placeholder.</p>
+                  <a href="" class="btn btn-outline-secondary">View</a>
+                </div>
               </div>
-              <div class="column">
-                <a href="https://github.com/Certaingemstone"><img src="icons/GitHub-Mark-Light-120px-plus.png" alt="GitHub" style="width:50%" ></a>
+            </div>
+  
+            <div class="column">
+              <div class="card">
+                <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                  <img src="images/ornl.jpg" class="img-fluid"/>
+                  <a href="">
+                    <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                  </a>
+                </div>
+                <div class="card-body border-secondary">
+                  <h3 class="card-title">Shattering Deuterium Neon</h3>
+                  <p class="card-text">Placeholder </p>
+                  <a href="" class="btn btn-outline-secondary">View</a>
+                </div>
               </div>
             </div>
 
+            <div class="column">
+              <div class="card">
+                <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
+                  <img src="images/bubble.jpg" class="img-fluid"/>
+                  <a href="">
+                    <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
+                  </a>
+                </div>
+                <div class="card-body border-secondary">
+                  <h3 class="card-title">Carbon Capture Products</h3>
+                  <p class="card-text">Work in progress.</p>
+                  <a class="btn btn-outline-secondary">Coming soon!</a>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+
+          </div>
         </div>
       </div>
-    </header>
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
